--- a/package.json
+++ b/package.json
@@ -5,43 +5,37 @@
   "description": "Gllacy",
   "devDependencies": {
     "@htmlacademy/editorconfig-cli": "1.0.x",
-    "autoprefixer": "7.1.x",
-    "browser-sync": "2.18.13",
-    "css-mqpacker": "^6.0.1",
+    "autoprefixer": "7.2.x",
+    "browser-sync": "2.23.6",
+    "css-mqpacker": "^6.0.2",
     "del": "^3.0.0",
-    "eslint": "4.8.0",
-    "eslint-config-htmlacademy": "0.3.x",
+    "eslint": "4.17.0",
+    "eslint-config-htmlacademy": "0.4.x",
     "gulp": "3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-csscomb": "^3.0.8",
-    "gulp-csso": "^3.0.0",
-    "gulp-eslint": "^4.0.0",
+    "gulp-csso": "^3.0.1",
+    "gulp-eslint": "^4.0.2",
     "gulp-gh-pages": "^0.5.4",
-    "gulp-gzip": "^1.4.0",
     "gulp-html-minifier2": "^1.1.8",
-    "gulp-htmlhint": "^0.3.1",
-    "gulp-imagemin": "^3.4.0",
-    "gulp-newer": "^1.3.0",
-    "gulp-plumber": "1.1.0",
-    "gulp-postcss": "^7.0.0",
+    "gulp-htmlhint": "^2.0.0",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-plumber": "1.2.0",
+    "gulp-postcss": "^7.0.1",
     "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^2.6.1",
-    "gulp-stylelint": "^5.0.0",
+    "gulp-sourcemaps": "^2.6.4",
     "gulp-svgmin": "^1.2.4",
-    "gulp-svgstore": "^6.1.0",
+    "gulp-svgstore": "^6.1.1",
     "gulp-uglify": "^3.0.0",
     "htmlhint-stylish": "^1.0.3",
-    "normalize.css": "^7.0.0",
-    "postcss-bem-linter": "^3.0.0",
+    "normalize.css": "^8.0.0",
     "postcss-browser-reporter": "^0.5.0",
-    "postcss-flexbugs-fixes": "^3.2.0",
+    "postcss-flexbugs-fixes": "^3.3.0",
     "postcss-reporter": "^5.0.0",
-    "postcss-sorting": "^3.0.2",
+    "postcss-sorting": "^3.1.0",
     "postcss-sprites": "^4.2.1",
-    "precss": "2.0.0",
-    "run-sequence": "^2.2.0",
-    "stylelint-order": "^0.7.0",
-    "webpack": "^3.6.0"
+    "precss": "3.1.0",
+    "run-sequence": "^2.2.1"
   },
   "scripts": {
     "test": "editorconfig-cli",
@@ -62,7 +56,7 @@
     "*.js",
     "js/**/*.js",
     "img/**/*.svg",
-    "postcss/**/*.{css,pcss}"
+    "postcss/**/*.{css}"
   ],
   "engines": {
     "node": "6.10"
