--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-svgmin": "^1.2.4",
     "gulp-svgstore": "^6.1.1",
+    "gulp-typograf": "^3.1.0",
     "gulp-uglify": "^3.0.0",
     "htmlhint-stylish": "^1.0.3",
     "normalize.css": "^8.0.0",
